NP-9328-course-access-checker, test changes